--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.1",
     "html-webpack-plugin": "^5.5.0",
     "style-loader": "^3.3.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.73.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-middleware": "^5.3.3",
